--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	compile 'org.eclipse.emf:org.eclipse.emf.common:2.12.0'
 	compile 'org.eclipse.emf:org.eclipse.emf.ecore:2.12.0'
 	compile 'org.eclipse.emf:org.eclipse.emf.ecore.xmi:2.12.0'
+	compile 'org.emfjson:emfjson-jackson:1.0.0-rc.1'
 	
 	// Logging
 	compile 'org.slf4j:slf4j-api:1.7.21'
